--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
     "@chakra-ui/react": "^1.7.2",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "@react-icons/all-files": "^4.1.0",
     "framer-motion": "^4.1.17",
     "next": "12.0.4",
+    "node-sass": "^6.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-elastic-carousel": "^0.11.5",
+    "react-icons": "^4.3.1",
+    "sass": "^1.45.0",
+    "typewriter-effect": "^2.18.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
